--- a/src/features/quiz/assets/_QuizImageViewer.scss
+++ b/src/features/quiz/assets/_QuizImageViewer.scss
@@ -6,11 +6,10 @@
 	width: 100%;
 	height: 100%;
 
-	& > img {
-		max-width: 100%;
-		max-height: 100%;
-		height: 100%;
-		object-fit: contain;
+	@media (width >= 1024px) {
+		width: auto;
+		aspect-ratio: 16 / 9;
+		justify-self: center;
 	}
 }
 
